--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ hr {
 
 .navbar-blue {
     border-width:0;
-	background-color:#3B5999;
+	background-color:#860808;
     color:#ffffff;
     font-family:arial,sans-serif;
     top:0;
@@ -119,14 +119,30 @@ hr {
     background-color:#393939;
 }
 
+.slidebar_logo{    
+  display:block;
+  padding:3px;
+  background-color:#fff;
+  background: url('../img/logo.png') no-repeat !important;
+  color:#3B5999;
+  height:173px;
+  width:200px;
+  margin:9px;
+  text-align:center;
+  text-decoration:none;
+  text-shadow:0 0 1px;
+  border-radius:2px; 
+  cursor: pointer;
+}
+
 .logo {
   display:block;
   padding:3px;
   background-color:#fff;
-  background-image: url(../img/logo.png)
+  background: url('../img/text_logo.png') no-repeat !important;
   color:#3B5999;
-  height:26px;
-  width:110px;
+  height:30px;
+  width:300px;
   margin:9px;
   margin-right:2px;
   margin-left:15px;
@@ -249,7 +265,7 @@ small.text-muted {
   }
 
   .navbar-blue {
-	background-color:#3B5999;
+	background-color:#860808;
     top:0;
     width:100%;
     position:relative;
@@ -356,7 +372,7 @@ html .fc, .fc table {
 	text-align: center
 }
 .fc-header-right {
-	text-align: right;
+	text-align: center;
 	/**position: absolute;**/
 	top: -34px;
 	right: 10px
@@ -368,7 +384,7 @@ html .fc, .fc table {
 .fc-header-title h2 {
 	margin-top: 0;
 	white-space: nowrap;
-	font-size: 15px;
+    font-size: 10px; font-size: 2vw;
 	color: #6C737F;
 	line-height: 55px;
 }
@@ -739,13 +755,13 @@ table.fc-border-separate {
 .fc-agenda .ui-resizable-resizing {
 	_overflow: hidden
 }
-.fc-header-left .fc-button-prev .fc-button-inner {background: url('../img/icons-sa7c41345d9.png') no-repeat; background-position: 0 -351px;
+.fc-header-left .fc-button-prev .fc-button-inner {background: url('../img/icons/previous.png') no-repeat !important;
 height: 16px;
-width: 11px;}
+width: 16px;}
 
-.fc-header-left .fc-button-next .fc-button-inner {background: url('../img/icons-sa7c41345d9.png') no-repeat; background-position: 0 -367px;
+.fc-header-left .fc-button-next .fc-button-inner {background: url('../img/icons/next.png') no-repeat !important;
 height: 16px;
-width: 11px;}
+width: 16px;}
 
 /* Full Calendar - End */
 /* Chat*/
@@ -782,3 +798,68 @@ width: 11px;}
     height: 350px;
     overflow-y: scroll;
 }
+/***chat - end ***/
+/**icons**/
+.glyphicon-home-gh{
+    background: url('../img/icons/home-icon.png') no-repeat;
+    width: 20px !important;
+    height: 20px;
+    padding:5px;
+    background-position: center; 
+    padding: 2px;
+}
+.glyphicon-schedule-gh{
+    background: url('../img/icons/calendar-icon.png') no-repeat;
+    width: 20px !important;
+    height: 20px;
+    padding:5px;
+    background-position: center;
+    padding: 2px;
+
+}
+.glyphicon-myaccount-gh{
+    background: url('../img/icons/manage-icon.png') no-repeat;
+    width: 20px !important;
+    height: 20px;
+    padding:5px;
+    background-position: center; 
+    padding: 2px;
+
+}
+.glyphicon-contact-gh{
+    background: url('../img/icons/contact-icon.png') no-repeat;
+    width: 20px !important;
+    height: 20px;
+    padding:5px;
+    background-position: center;  
+    padding: 2px;
+}
+.glyphicon-expand,.glyphicon-chevron-left,.glyphicon-chevron-right{
+    background: url('../img/icons/expand.png') no-repeat;
+    width: 20px !important;
+    height: 20px;
+    padding:5px;
+    background-position: center;  
+    padding: 2px;
+}
+.glyphicon-search{
+    background: url('../img/icons/glyphicons-28-search.png') no-repeat;
+    width: 20px !important;
+    height: 20px;
+    padding:5px;
+    background-position: center;  
+    padding: 2px;
+}
+.glyphicon-search:before,.glyphicon-expand:before,.glyphicon-chevron-left:before,.glyphicon-chevron-right:before,.glyphicon-user:before
+{
+    content: none !important;
+}
+.glyphicon-user{
+    background: url('../img/icons/glyphicons-4-user.png') no-repeat;
+    width: 20px !important;
+    height: 20px;
+    padding:5px;
+    background-position: center;  
+    padding: 2px;
+}
+glyphicons-4-user
