--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ hr {
 
 .navbar-blue {
     border-width:0;
-	background-color:#860808;
+	background-color:#421212;
     color:#ffffff;
     font-family:arial,sans-serif;
     top:0;
@@ -107,6 +107,9 @@ hr {
 #sidebar {
     padding:0px;
 	padding-top:15px;
+    -webkit-box-shadow: 11px -4px 11px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 11px -4px 11px -2px rgba(0,0,0,0.75);
+    box-shadow: 11px -4px 11px -2px rgba(0,0,0,0.75);
 }
 
 #sidebar, #sidebar a, #sidebar-footer a {
@@ -141,8 +144,8 @@ hr {
   background-color:#fff;
   background: url('../img/text_logo.png') no-repeat !important;
   color:#3B5999;
-  height:30px;
-  width:300px;
+  height:20px;
+  width:200px;
   margin:9px;
   margin-right:2px;
   margin-left:15px;
@@ -265,7 +268,7 @@ small.text-muted {
   }
 
   .navbar-blue {
-	background-color:#860808;
+	background-color:#421212;
     top:0;
     width:100%;
     position:relative;
@@ -308,7 +311,8 @@ small.text-muted {
 .fc {
 	direction: ltr;
 	text-align: left;
-	position: relative
+	position: relative;
+    font-family: 'Arvo', serif;
 }
 .fc table {
 	border-collapse: collapse;
@@ -385,6 +389,7 @@ html .fc, .fc table {
 	margin-top: 0;
 	white-space: nowrap;
     font-size: 10px; font-size: 2vw;
+    font-weight: normal;
 	color: #6C737F;
 	line-height: 55px;
 }
@@ -862,4 +867,171 @@ width: 16px;}
     background-position: center;  
     padding: 2px;
 }
-glyphicons-4-user
+
+/**** Corrections***/
+.panel-nomargin{
+    margin-bottom: 5px !important;
+    margin-top: 5px;
+}
+
+.navbar-fixed-bottom{
+    background: #df432d;
+    background: url('../img/circles-background.jpg') repeat-y 50% 0;
+    -webkit-box-shadow: 0px -4px 11px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px -4px 11px -2px rgba(0,0,0,0.75);
+    box-shadow: 0px -4px 11px -2px rgba(0,0,0,0.75);
+}
+
+.well{
+    min-height:600px;
+    background-color:#421212;
+}
+
+/***** Animation****/
+
+#Jarvis > div { 
+  position: absolute; 
+  top: 12%; 
+  left: 50%; 
+  margin-left: -103px;
+  width: 200px; 
+  height: 200px; 
+  border-radius: 50%; 
+  border: 0px solid #fff;
+  -webkit-transform-style: preserve-3d; 
+  -webkit-transform: rotateX(80deg) rotateY(20deg);
+  transform-style: preserve-3d; 
+  transform: rotateX(80deg) rotateY(20deg);
+}
+
+#Jarvis  > div:first-of-type:after {
+  content: "";
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  background: #fff;
+  border-radius: 50%;
+  -webkit-transform: rotateX(-80deg) rotateY(0);
+  transform: rotateX(-80deg) rotateY(0);
+  box-shadow: 0 0 25px #fff;
+  -webkit-animation: nucleus_ 2s infinite linear;
+  animation: nucleus_ 2s infinite linear;
+  left: 50%;
+  top: 50%;
+  margin-top: -20px;
+  margin-left: -20px;
+}
+
+#Jarvis  > div:nth-of-type(2) {
+  -webkit-transform: rotateX(-80deg) rotateY(20deg);
+  transform: rotateX(-80deg) rotateY(20deg);
+}
+
+#Jarvis  > div:nth-of-type(3) {
+  -webkit-transform: rotateX(-70deg) rotateY(60deg);
+  transform: rotateX(-70deg) rotateY(60deg);
+}
+
+#Jarvis  > div:nth-of-type(4) {
+  -webkit-transform: rotateX(70deg) rotateY(60deg);
+  transform: rotateX(70deg) rotateY(60deg);
+}
+
+#Jarvis  > div > div {
+  width: 200px;
+  height: 200px;
+  position: relative;
+  -webkit-transform-style: preserve-3d;
+  -webkit-animation: trail_ 2s infinite linear;
+  transform-style: preserve-3d;
+  animation: trail_ 2s infinite linear;
+}
+
+#Jarvis  > div > div:after {
+  content: ""; 
+  position: absolute; 
+  top: -5px; 
+  box-shadow: 0 0 12px #fff;
+  left: 50%; 
+  margin-left: -5px; 
+  width: 5px; 
+  height: 5px; 
+  border-radius: 50%;
+  background-color: #fff;
+  -webkit-animation: particle_ 2s infinite linear;
+  animation: particle_ 2s infinite linear;
+}
+
+#Jarvis  > div:nth-of-type(2) > div,
+#Jarvis  > div:nth-of-type(2) > div:after {
+  -webkit-animation-delay: -.5s;
+  animation-delay: -.5s;
+}
+
+#Jarvis  > div:nth-of-type(3)  > div,
+#Jarvis  > div:nth-of-type(3)  > div:after {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+
+#Jarvis  > div:nth-of-type(4) > div,
+#Jarvis  > div:nth-of-type(4) > div:after {
+  -webkit-animation-delay: -1.5s;
+  animation-delay: -1.5s;
+}
+
+@-webkit-keyframes trail_ { 
+    from {
+        -webkit-transform: rotateZ(0deg);
+    } to {
+        -webkit-transform: rotateZ(360deg);
+    }
+}
+
+@keyframes trail_ { 
+    from {
+        transform: rotateZ(0deg);
+    } to {
+        transform: rotateZ(360deg);
+    }
+}
+
+@-webkit-keyframes particle_ { 
+    from {
+        -webkit-transform: rotateX(90deg) rotateY(0deg); 
+        transform: rotateX(90deg) rotateY(0deg); 
+    } to {
+      -webkit-transform: rotateX(90deg) rotateY(-360deg);  
+        transform: rotateX(90deg) rotateY(-360deg); 
+    } 
+}
+
+
+@keyframes particle_ { 
+    from {
+        transform: rotateX(90deg) rotateY(0deg); 
+    } to { 
+        transform: rotateX(90deg) rotateY(-360deg); 
+    } 
+}
+
+@keyframes nucleus_ { 
+    0% {
+        box-shadow: 0 0 0 transparent;
+    } 50% { 
+        box-shadow: 0 0 25px #fff;
+    } 100% { 
+        box-shadow: 0 0 0 transparent;
+    }
+}
+
+@-webkit-keyframes nucleus_ { 
+    0% {
+        box-shadow: 0 0 0 transparent;
+    } 50% { 
+        box-shadow: 0 0 25px #fff;
+    } 100% { 
+        box-shadow: 0 0 0 transparent;
+    }
+}
+/* END Keyframes for the initial animation */
